# sam_rust_woodnet

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml  template.yaml
infra/: zip.ps1
src/: main.rs
test/: data1.json  data2.json  data3.json  table.rs
test/data/: LogIn.json  LogOut.json  SignUp.json  UserDelete.json
test/db/: create_user.sql
